styles/globals.css
:root {
  --item-radius: 15px;
  --bg-color: #242424;
  --foreground-color: #333333;
  --gradient-purple-orange-fallback: rgba(196,38,223,1);
  --purple-orange-gradient: linear-gradient(90deg, rgba(196,38,223,.9) 0%, rgba(255,150,52,.9) 100%);
  --global-padding: 10px;
  --text-color: white;
  --global-shadow: 4px 4px 8px 2px #030303;
}


html,
body {
  padding: 0;
  margin: 0;
  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
    width: 100%;
    background-color: var(--bg-color);
}

a {
  color: inherit;
  text-decoration: none;
}

.link a {
  text-decoration: underline;
}

.link a:hover {
  color: var(--gradient-purple-orange-fallback);
  background: var(--purple-orange-gradient);
  -webkit-background-clip: text;
  -webkit-text-fill-color: transparent;
}

* {
  box-sizing: border-box;
}

.container {
  width: 100%;
  padding: var(--global-padding);
}

.container_body {
  background-color: var(--foreground-color);
  border-radius: var(--item-radius);
  color: var(--text-color);
  box-shadow: var(--global-shadow);
  padding: 10px;
}

select {
  background-color: rgba(12, 12, 12, .1);
  border: 1px solid white;
  border-radius: var(--item-radius);
  color: var(--text-color);
  font-size: 14pt;
  padding: 2px;
}

input {
  outline: 0;
  background-color: rgba(12, 12, 12, .1);
  border-width: 0px 0px 2px;
  border: 0px 0px 2px 0px solid white;
  color: var(--text-color);
  font-size: 14pt;
  padding: 2px;
  margin: 5px;
}

